--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -7,7 +7,7 @@
 - name: RedHat - Import 1Password signing key
   rpm_key:
     state: present
-    key: https://onepassword.s3.amazonaws.com/linux/keys/1password.asc
+    key: https://downloads.1password.com/linux/keys/1password.asc
     fingerprint: 3FEF9748469ADBE15DA7CA80AC2D62742012EA22
 
 - name: RedHat - Import Zoom signing key
@@ -21,10 +21,10 @@
     file: 1Password
     name: 1password
     description: "1Password for Linux"
-    baseurl: https://onepassword.s3.amazonaws.com/linux/rpm
+    baseurl: https://downloads.1password.com/linux/rpm
     enabled: yes
     gpgcheck: yes
-    gpgkey: https://onepassword.s3.amazonaws.com/linux/keys/1password.asc
+    gpgkey: https://downloads.1password.com/linux/keys/1password.asc
     repo_gpgcheck: yes
 
 - name: RedHat - Check for Docker support
