fedora: require fedora 33 to pass CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,6 +176,13 @@ fedora_33:
     - .setup_fedora
     - .rules_redhat
   image: fedora:33
+
+fedora_34:
+  extends:
+    - .build
+    - .setup_fedora
+    - .rules_redhat
+  image: fedora:34
   allow_failure: true
 
 fedora_rawhide:
