--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -79,3 +79,32 @@
     gpgkey: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
     repo_gpgcheck: yes
   when: ansible_distribution_major_version|int >= 30
+
+# TODO: remove this when docker catches up
+# https://github.com/docker/for-linux/issues/1114
+- name: Fedora33 - Add Docker repository for Fedora32
+  tags: [ docker ]
+  yum_repository:
+    file: docker-ce
+    name: docker-ce-stable
+    description: "Docker CE Stable - {{ ansible_distribution }} - 32 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/stable"
+    enabled: yes
+    gpgcheck: yes
+    gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    repo_gpgcheck: yes
+  when: ansible_distribution_major_version|int == 33
+
+# TODO: remove this when docker catches up
+- name: Fedora34 - Add Docker repository for Fedora32
+  tags: [ docker ]
+  yum_repository:
+    file: docker-ce
+    name: docker-ce-stable
+    description: "Docker CE Stable - {{ ansible_distribution }} - 32 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/stable"
+    enabled: yes
+    gpgcheck: yes
+    gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    repo_gpgcheck: yes
+  when: ansible_distribution_major_version|int == 34
