--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -82,13 +82,14 @@
 
 # TODO: remove this when docker catches up
 # https://github.com/docker/for-linux/issues/1114
-- name: Fedora33 - Add Docker repository for Fedora32
+# test is used for cgroupv2 support
+- name: Fedora33 - Add Docker Test repository for Fedora32
   tags: [ docker ]
   yum_repository:
     file: docker-ce
-    name: docker-ce-stable
-    description: "Docker CE Stable - {{ ansible_distribution }} - 32 - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/stable"
+    name: docker-ce-test
+    description: "Docker CE Test - {{ ansible_distribution }} - 32 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/test"
     enabled: yes
     gpgcheck: yes
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
@@ -96,13 +97,15 @@
   when: ansible_distribution_major_version|int == 33
 
 # TODO: remove this when docker catches up
-- name: Fedora34 - Add Docker repository for Fedora32
+# https://github.com/docker/for-linux/issues/1114
+# test is used for cgroupv2 support
+- name: Fedora34 - Add Docker Test repository for Fedora32
   tags: [ docker ]
   yum_repository:
     file: docker-ce
-    name: docker-ce-stable
-    description: "Docker CE Stable - {{ ansible_distribution }} - 32 - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/stable"
+    name: docker-ce-test
+    description: "Docker CE Test - {{ ansible_distribution }} - 32 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/test"
     enabled: yes
     gpgcheck: yes
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
