all: add pkenv for multiple packer versions

--- a/tasks/user/applications.yml
+++ b/tasks/user/applications.yml
@@ -2,6 +2,12 @@
 - name: All - Git update pyenv # noqa 401
   diff: false
   git:
+    repo: https://github.com/iamhsa/pkenv.git
+    dest: ~/Applications/pkenv
+
+- name: All - Git update pyenv # noqa 401
+  diff: false
+  git:
     repo: https://github.com/pyenv/pyenv.git
     dest: ~/Applications/pyenv
 
