--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -80,38 +80,15 @@
     repo_gpgcheck: yes
   when: ansible_distribution_major_version|int >= 30
 
-# TODO: remove this when docker catches up
-# https://github.com/docker/for-linux/issues/1114
-# test is used for cgroupv2 support
-# switch to stable when it has
-# - containerd 1.4
-# - docker-ce 20.10
-# - docker-ce-cli 20.10
-- name: Fedora33 - Add Docker Test repository
+- name: Fedora34+ - Add Docker Stable repository for Fedora33
   tags: [ docker ]
   yum_repository:
     file: docker-ce
-    name: docker-ce-test
-    description: "Docker CE Test - {{ ansible_distribution }} - $releasever - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/$releasever/$basearch/test"
-    enabled: "{{ uri_docker_repo_rpm is succeeded }}"
-    gpgcheck: yes
-    gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
-    repo_gpgcheck: yes
-  when: ansible_distribution_major_version|int == 33
-
-# TODO: remove this when docker catches up
-# https://github.com/docker/for-linux/issues/1114
-# test is used for cgroupv2 support
-- name: Fedora34 - Add Docker Test repository for Fedora33
-  tags: [ docker ]
-  yum_repository:
-    file: docker-ce
-    name: docker-ce-test
-    description: "Docker CE Test - {{ ansible_distribution }} - 33 - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/32/$basearch/test"
+    name: docker-ce-stable
+    description: "Docker CE Stable - {{ ansible_distribution }} - 33 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/33/$basearch/stable"
     enabled: yes
     gpgcheck: yes
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     repo_gpgcheck: yes
-  when: ansible_distribution_major_version|int == 34
+  when: ansible_distribution_major_version|int >= 34
