--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -81,7 +81,7 @@
 # This is for the razer drivers which run in userspace
 - name: Fedora >=30 - Add user to plugdev group
   user:
-    name: '{{ ansible_user }}'
+    name: '{{ ansible_user_id }}'
     groups: plugdev
     append: true
   when: ansible_distribution_major_version|int >= 30
