--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -103,6 +103,7 @@
     name:
       - git-delta
       - google-roboto-mono-fonts
+      - starship
     state: present
   when: ansible_distribution_major_version|int >= 31
 
