all: install psutil from the system packages for changing dconf settings

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -22,6 +22,7 @@
       - make
       - nodejs
       - npm
+      - python-psutil
       - shellcheck
       - tk # windowing toolkit needed for gitk
       - tree
