--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -80,15 +80,15 @@
     repo_gpgcheck: true
   when: ansible_distribution_major_version|int >= 30
 
-- name: Fedora34+ - Add Docker Stable repository for Fedora33
+- name: Fedora >=35 - Add Docker Stable repository for Fedora34
   tags: [docker]
   yum_repository:
     file: docker-ce
     name: docker-ce-stable
-    description: "Docker CE Stable - {{ ansible_distribution }} - 33 - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/33/$basearch/stable"
+    description: "Docker CE Stable - {{ ansible_distribution }} - 34 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/34/$basearch/stable"
     enabled: true
     gpgcheck: true
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     repo_gpgcheck: true
-  when: ansible_distribution_major_version|int >= 34
+  when: ansible_distribution_major_version|int >= 35
