--- a/tasks/system/containers.yml
+++ b/tasks/system/containers.yml
@@ -16,6 +16,22 @@
     dest: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     mode: '0755'
 
+- name: Non-Debian - Install docker-compose completions {{ docker_compose_version }}
+  tags: [ docker ]
+  get_url:
+    url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
+    dest: /usr/share/zsh/site-functions/_docker-compose
+    mode: '0644'
+  when: ansible_os_family != 'Debian'
+
+- name: Debian - Install docker-compose completions {{ docker_compose_version }}
+  tags: [ docker ]
+  get_url:
+    url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
+    dest: /usr/local/share/zsh/site-functions/_docker-compose
+    mode: '0644'
+  when: ansible_os_family == 'Debian'
+
 - name: All - Update link to latest docker-compose
   tags: [ docker ]
   file:
