fedora: add note about starship prompt

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -102,7 +102,7 @@
     name:
       - git-delta
       - google-roboto-mono-fonts
-      - starship
+      - starship # CLI prompt
     state: present
   when: ansible_distribution_major_version|int >= 31
 
