all: added ripgrep

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -23,6 +23,7 @@
       - nodejs
       - npm
       - python-psutil
+      - ripgrep
       - shellcheck
       - tk # windowing toolkit needed for gitk
       - tree
