--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -14,5 +14,6 @@
       - python3-cairo
       - python3-launchpadlib
       - python3-testresources
+      - ripgrep
     state: present
   when: ansible_distribution_major_version|int >= 20
