fedora: add ytop

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -104,6 +104,7 @@
       - git-delta
       - google-roboto-mono-fonts
       - starship # CLI prompt
+      - ytop # CLI system monitoring
     state: present
   when: ansible_distribution_major_version|int >= 31
 
