all: add lynis for security scanning

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -19,6 +19,7 @@
       - jq
       - keybase
       - keybase-gui
+      - lynis # Security scanning tool
       - make
       - nodejs
       - npm
