--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,6 +174,13 @@ fedora_34:
     - .setup_fedora
     - .rules_redhat
   image: fedora:34
+
+fedora_35:
+  extends:
+    - .build
+    - .setup_fedora
+    - .rules_redhat
+  image: fedora:35
   allow_failure: true
 
 fedora_rawhide:
