debian: 1password is not compatible with debian 9

--- a/tasks/system/debian/repositories.yml
+++ b/tasks/system/debian/repositories.yml
@@ -61,6 +61,10 @@
 
 ### --- Distro specific ---
 
+- name: Debian Repositories
+  import_tasks: debian/repositories.yml
+  when: ansible_distribution == 'Debian'
+
 - name: Ubuntu Repositories
   import_tasks: ubuntu/repositories.yml
   when: ansible_distribution == 'Ubuntu'
