--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -8,7 +8,6 @@
     pkg: "{{ item }}"
     state: present
   loop:
-    - 1password
     - bash
     - bash-completion
     - code
@@ -59,6 +58,10 @@
     - https://prerelease.keybase.io/keybase_amd64.deb
 
 ### --- Distro specific ---
+
+- name: Debian Packages
+  import_tasks: debian/packages.yml
+  when: ansible_distribution == 'Debian'
 
 - name: Ubuntu Packages
   import_tasks: ubuntu/packages.yml
