--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -4,6 +4,7 @@
     pkg:
       - 1password
       - flameshot
+      - npm
       - libasound2
     state: present
   when: ansible_distribution_major_version|int >= 18
