debian: dont test on debian9 since it used EOL python

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -41,8 +41,8 @@
     - zsh
 
 - name: Debian - Best effort to install optional packages
-  dnf:
-    name: "{{ item }}"
+  apt:
+    pkg: "{{ item }}"
     state: present
   loop:
     - exa
