--- a/systemd.yml
+++ b/systemd.yml
@@ -7,9 +7,9 @@
     - name: RedHat - Enable flatpak updates
       systemd:
         name: flatpak-update.timer
-        enabled: yes
+        enabled: true
         state: started
-        daemon_reload: yes
+        daemon_reload: true
         scope: user
       when: ansible_os_family == 'RedHat'
 
@@ -17,16 +17,16 @@
       become: true
       systemd:
         name: dnf-automatic.timer
-        enabled: yes
+        enabled: true
         state: started
-        daemon_reload: yes
+        daemon_reload: true
       when: ansible_os_family == 'RedHat'
 
     - name: RedHat - Enable docker
       become: true
       systemd:
         name: docker.service
-        enabled: yes
+        enabled: true
         state: started
-        daemon_reload: yes
+        daemon_reload: true
       when: ansible_os_family == 'RedHat'
