--- a/tasks/user/dotfiles.yml
+++ b/tasks/user/dotfiles.yml
@@ -4,7 +4,7 @@
     path: ~/Applications/dotfiles
   register: dotfiles
 
-- name: All - Stash dotfile changes # noqa 303
+- name: All - Stash dotfile changes  # noqa 303
   command:
     chdir: ~/Applications/dotfiles
     cmd: git stash
@@ -18,12 +18,12 @@
     version: main
   register: git_dotfiles
 
-- name: All - UnStash dotfile changes # noqa 303
+- name: All - UnStash dotfile changes  # noqa 303
   command:
     chdir: ~/Applications/dotfiles
     cmd: git stash pop
   when: stashed_changes.stdout is defined and stashed_changes.stdout != 'No local changes to save'
 
-- name: All - Install Dotfiles
+- name: All - Install Dotfiles  # noqa no-handler
   command: ~/Applications/dotfiles/install.py
   when: git_dotfiles is changed
