--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
 
-[*.yml]
+[*.{yml,yaml}]
 indent_size = 2
 
 [Makefile]
