redhat: configure stable and beta channels for 1password

--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -16,15 +16,26 @@
     key: https://zoom.us/linux/download/pubkey
     fingerprint: 396060CADD8A75220BFCB369B903BF1861A7C71D
 
-- name: RedHat - Add 1Password repository
+- name: RedHat - Add 1Password beta repository
   yum_repository:
-    file: 1password
-    name: 1password
-    description: "\"1Password Beta Channel\""
+    file: 1password-ansible
+    name: 1password-beta
+    description: 1Password - Beta
     baseurl: https://downloads.1password.com/linux/rpm/beta/$basearch
     enabled: true
     gpgcheck: true
-    gpgkey: "\"https://downloads.1password.com/linux/keys/1password.asc\""
+    gpgkey: https://downloads.1password.com/linux/keys/1password.asc
+    repo_gpgcheck: true
+
+- name: RedHat - Add 1Password stable repository
+  yum_repository:
+    file: 1password-ansible
+    name: 1password-stable
+    description: 1Password - Stable
+    baseurl: https://downloads.1password.com/linux/rpm/stable/$basearch
+    enabled: true
+    gpgcheck: true
+    gpgkey: https://downloads.1password.com/linux/keys/1password.asc
     repo_gpgcheck: true
 
 - name: RedHat - Check for Docker support
