--- a/config/ansible.cfg
+++ b/config/ansible.cfg
@@ -81,7 +81,7 @@ inventory       = ./inventory.yml
 # by default.
 #
 # Enable callback plugins, they can output to stdout but cannot be 'stdout' type.
-#callback_whitelist = timer, mail
+callback_whitelist = ansible.posix.profile_tasks, ansible.posix.timer
 
 # Determine whether includes in tasks and handlers are "static" by
 # default. As of 2.0, includes are dynamic by default. Setting these
