--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -114,6 +114,8 @@
     state: present
   loop:
     - https://zoom.us/client/latest/zoom_x86_64.rpm
+  retries: 3
+  delay: 3
 
 - name: RedHat - Install unsigned remote packages
   dnf:
